fix issue where bottom bar misaligned with bottom of screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #A7CCED;
@@ -96,6 +106,7 @@ body h4 {
     margin-left: auto;
     margin-right: auto;
     width: min(800px, 100% - 30px - env(safe-area-inset-left) - env(safe-area-inset-right));
+    flex: 1;
 }
 
 h5 {
